@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.tulip" name="Tulip Routine Libraries" version="2.1.0" provider-name="Twilight0">
+<addon id="script.module.tulip" name="Tulip Routine Libraries" version="2.1.1" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.python" version="2.24.0"/>
         <import addon="script.module.kodi-six" version="0.0.2"/>
@@ -12,36 +12,11 @@
         <license>GNU GENERAL PUBLIC LICENSE. Version 3, 29 June 2007</license>
         <source>https://github.com/Twilight0/script.module.tulip</source>
         <news>
-[B]2.1.0[/B]
+[B]2.1.X[/B]
 - Utilize kodi-six to improve further Python 2/3 compatibility
 - Added "builtin" function into directory module, which can execute various builtin commands with arguments
 - Added various supplementary fuctions into control module
-- Various other tweaks
-
-[B]2.0.X[/B]
-- Significantly improved Python 3 compatibility:
-  > Only absolute imports are used
-  > Added compat module to allow several modules imports compatibility
-  > Several other related tweaks
-- Improved youtube module to allow more results from video lists and playlists
-  > Tweaks and cosmetics added as well
-- Several enhancements into directory module:
-  > UTF-8 encoding optional via exception into quoted queries
-  > Added parameters for more manifest types and adaptive types
-  > Several other enhancements into resolve function
-  > New m3u playlist maker function
-  > isPlayable parameter made available for disabling auto playable assignment based on isFolder
-  > Added an alternative mode for playing an item which does not require the isPlayable property
-- Added login support for client.request module
-- Improved ssl verification on client module
-- Improved redirection handler
-- Added parse_headers function which converts a response/request headers string into dictionary
-- Simplified random agent picking, addition of mobile agents function
-- Added ordereddict conditional into compat module
-- Added busy function to activate busydialog
-- Removed conditional and accompanying function for optional resolvers
-- Added headers parameter into spoofer function and improved it. Now capable of wrapping a url as well.
-- Re-addition of manifest_update_parameter for resolve function on live streams
-- Various other efficiency tweaks</news>
+- Added argv parameter to directory module's function to work with Leia's new python caching (requires testing)
+- Various other tweaks</news>
     </extension>
 </addon>
