@@ -1,7 +1,8 @@
-[B]2.1.0[/B]
+[B]2.1.X[/B]
 - Utilize kodi-six to improve further Python 2/3 compatibility
 - Added "builtin" function into directory module, which can execute various builtin commands with arguments
 - Added various supplementary fuctions into control module
+- Added argv parameter to directory module's function to work with Leia's new python caching (requires testing)
 - Various other tweaks
 
 [B]2.0.X[/B]
